src/test/resources/com/github/stefanbirkner/chelidonium/errors/closeable.snippet



<form id="model" action="/test/errors/closeable.html" method="post">
	<div class="alert alert-error"><a class="close" data-dismiss="alert">×</a>Test A</div>
</form>